update: refatoração das configs e classes