@@ -3,6 +3,7 @@ package br.com.student.portal.service.question;
 import br.com.student.portal.dto.request.QuestionRequest;
 import br.com.student.portal.dto.response.QuestionResponse;
 import br.com.student.portal.entity.Question;
+import br.com.student.portal.entity.User;
 import br.com.student.portal.exception.ErrorCode;
 import br.com.student.portal.exception.types.ForbiddenException;
 import br.com.student.portal.exception.types.NotFoundException;
@@ -10,53 +11,59 @@ import br.com.student.portal.repository.QuestionRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class QuestionService {
 
     private final QuestionRepository questionRepository;
 
+    @Transactional(readOnly = true)
     public QuestionResponse getQuestionById(UUID id) {
         log.debug("Buscando pergunta por ID: {}", id);
-        Question question = findQuestionById(id);
+        Question question = findQuestionOrThrow(id);
         return mapToResponse(question);
     }
 
     @Transactional(readOnly = true)
     public List<QuestionResponse> getAllQuestions() {
         log.debug("Buscando todas as perguntas");
-        return questionRepository.findAllByOrderByCreatedAtDesc()
-                .stream()
+        return questionRepository.findAllByOrderByCreatedAtDesc().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public Page<QuestionResponse> getAllQuestions(Pageable pageable) {
-        log.debug("Buscando perguntas paginadas: página {}, tamanho {}",
-                pageable.getPageNumber(), pageable.getPageSize());
+        log.debug("Buscando perguntas paginadas");
         return questionRepository.findAll(pageable)
                 .map(this::mapToResponse);
     }
 
-    public QuestionResponse createQuestion(QuestionRequest request) {
+    @Transactional(readOnly = true)
+    public List<QuestionResponse> searchQuestions(String term) {
+        log.debug("Buscando perguntas com termo: {}", term);
+        return questionRepository.searchByTerm(term).stream()
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+    @Transactional
+    public QuestionResponse createQuestion(QuestionRequest request, User author) {
         log.info("Criando nova pergunta: {}", request.getTitle());
 
         Question question = Question.builder()
                 .title(request.getTitle())
                 .content(request.getContent())
-                .author(request.getUser())
+                .author(author)
+                .answerCount(0)
                 .build();
 
         Question savedQuestion = questionRepository.save(question);
@@ -65,81 +72,65 @@ public class QuestionService {
         return mapToResponse(savedQuestion);
     }
 
-    public QuestionResponse updateQuestion(UUID id, QuestionRequest request) {
+    @Transactional
+    public QuestionResponse updateQuestion(UUID id, QuestionRequest request, User requester) {
         log.info("Atualizando pergunta ID: {}", id);
 
-        Question existingQuestion = findQuestionById(id);
-        validateAuthorPermission(existingQuestion, request.getUser().getId(), "editar");
+        Question question = findQuestionOrThrow(id);
+        validateAuthorPermission(question, requester);
 
-        existingQuestion.setTitle(request.getTitle());
-        existingQuestion.setContent(request.getContent());
+        question.setTitle(request.getTitle());
+        question.setContent(request.getContent());
 
-        Question updatedQuestion = questionRepository.save(existingQuestion);
+        Question updatedQuestion = questionRepository.save(question);
         log.info("Pergunta atualizada: {}", updatedQuestion.getId());
 
         return mapToResponse(updatedQuestion);
     }
 
-    public void deleteQuestion(UUID id) {
+    @Transactional
+    public void deleteQuestion(UUID id, User requester) {
         log.info("Deletando pergunta ID: {}", id);
 
-        Question question = findQuestionById(id);
+        Question question = findQuestionOrThrow(id);
 
-        // Nota: A validação de permissão deveria receber o usuário atual
-        // Deixei um TODO para você melhorar isso depois
+        boolean isAuthor = question.getAuthor().getId().equals(requester.getId());
+        boolean isAdmin = requester.isAdmin();
+
+        if (!isAuthor && !isAdmin) {
+            throw new ForbiddenException(ErrorCode.FORBIDDEN,
+                    "Você não tem permissão para deletar esta pergunta.");
+        }
+
         questionRepository.delete(question);
         log.info("Pergunta deletada: {}", id);
     }
 
-    @Transactional(readOnly = true)
-    public List<QuestionResponse> searchQuestions(String term) {
-        log.debug("Buscando perguntas com termo: {}", term);
-        return questionRepository.searchByTerm(term)
-                .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+    // ==================== Métodos Privados ====================
 
-    @Transactional(readOnly = true)
-    public Page<QuestionResponse> searchQuestions(String term, Pageable pageable) {
-        log.debug("Buscando perguntas paginadas com termo: {}", term);
-
-        List<QuestionResponse> results = searchQuestions(term);
-
-        int start = (int) pageable.getOffset();
-        int end = Math.min(start + pageable.getPageSize(), results.size());
-
-        return new PageImpl<>(
-                results.subList(start, end),
-                pageable,
-                results.size()
-        );
-    }
-
-    // ==================== MÉTODOS AUXILIARES ====================
-
-    private Question findQuestionById(UUID id) {
+    private Question findQuestionOrThrow(UUID id) {
         return questionRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException(ErrorCode.QUESTION_NOT_FOUND,
                         "Pergunta não encontrada com ID: " + id));
     }
 
-    private void validateAuthorPermission(Question question, UUID requesterId, String action) {
-        if (!question.getAuthor().getId().equals(requesterId)) {
+    private void validateAuthorPermission(Question question, User requester) {
+        if (!question.getAuthor().getId().equals(requester.getId())) {
             throw new ForbiddenException(ErrorCode.FORBIDDEN,
-                    "Apenas o autor pode " + action + " esta pergunta.");
+                    "Apenas o autor pode editar esta pergunta.");
         }
     }
 
-    private QuestionResponse mapToResponse(Question entity) {
+    private QuestionResponse mapToResponse(Question question) {
         return QuestionResponse.builder()
-                .id(entity.getId().toString())
-                .title(entity.getTitle())
-                .content(entity.getContent())
-                .author(entity.getAuthor())
-                .answerCount(entity.getAnswerCount() != null ? entity.getAnswerCount() : 0)
-                .createdAt(entity.getCreatedAt() != null ? entity.getCreatedAt().toString() : "")
-                .updatedAt(entity.getUpdatedAt() != null ? entity.getUpdatedAt().toString() : "")
+                .id(question.getId())
+                .title(question.getTitle())
+                .content(question.getContent())
+                .authorId(question.getAuthor().getId())
+                .authorName(question.getAuthor().getName())
+                .answerCount(question.getAnswerCount() != null ? question.getAnswerCount() : 0)
+                .createdAt(question.getCreatedAt())
+                .updatedAt(question.getUpdatedAt())
                 .build();
     }
 }
